make the packages section, edit the landing page to be more attractive and responsive

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <nav class="navbar">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
-                <a href="#food">Food</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#menu">Menu</a>
+                <a href="#packages">Packages</a>
                 <!-- <a href="#blogs">Blogs</a> -->
-                <a href="#reviews">Reviews</a>
+                <!-- <a href="#reviews">Reviews</a> -->
                 <a href="#contact">Contact Us</a>
             </nav>
 
@@ -60,7 +60,6 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide" style="background: url(images/hall1.jpg) no-repeat;">
                         <div class="content">
-                            <span>Beautiful banquet hall</span>
                             <h3>Awesome and cozy lighting</h3>
                             <button href="#" class="btn">Get Started</button>
                         </div>
@@ -68,15 +67,13 @@
 
                     <div class="swiper-slide slide" style="background: url(images/hall2.jpg) no-repeat;">
                         <div class="content">
-                            <span>Authentic Kitchen</span>
                             <h3>Awesome and cozy lighting</h3>
                             <button href="#" class="btn">Get Started</button>
                         </div>
                     </div>
 
-                    <div class="swiper-slide slide" style="background: url(images/hall3.jpg) no-repeat;">
+                    <div class="swiper-slide slide" style="background: url(images/hall5.jpg) no-repeat;">
                         <div class="content">
-                            <span>Awesome Services</span>
                             <h3>Awesome and cozy lighting</h3>
                             <a href="#" class="btn">Get Started</a>
                         </div>
@@ -84,7 +81,6 @@
 
                     <div class="swiper-slide slide" style="background: url(images/hall4.jpg) no-repeat;">
                         <div class="content">
-                            <span>Serene Environment</span>
                             <h3>Awesome and cozy lighting</h3>
                             <a href="#" class="btn">Get Started</a>
                         </div>
@@ -154,64 +150,7 @@
 
         <!-- start of the food section  -->
 
-        <section class="food" id="food">
-            <div class="heading">
-                <span>Popular dishes</span>
-                <h3>Our delicious food</h3>
-            </div>
 
-            <div class="swiper food-slider">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide slide" data-name="dish1">
-                        <img src="images/dish1.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish2">
-                        <img src="images/dish2.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish3">
-                        <img src="images/dish3.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish4">
-                        <img src="images/dish4.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish5">
-                        <img src="images/dish5.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish6">
-                        <img src="images/dish6.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish7">
-                        <img src="images/dish7.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish8">
-                        <img src="images/dish8.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish9">
-                        <img src="images/dish9.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-                </div>
-
-                <div class="swiper-pagination"></div>
-
-            </div>
-        </section>
 
         <!-- end of the food section  -->
 
@@ -670,15 +609,63 @@
 
         <!-- the packages section starts  -->
 
-            <section class="packages" id="packages">
-                <div class="heading">
-                    <span>Packages</span>
-                    <h3>Our Extended Packages</h3>
+        <section class="food" id="food">
+            <div class="heading">
+                <span>Packages</span>
+                <h3>Our Extended Packages</h3>
+            </div>
+            <div class="swiper food-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide slide" data-name="dish1">
+                        <img src="images/dish1.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish2">
+                        <img src="images/dish2.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish3">
+                        <img src="images/dish3.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish4">
+                        <img src="images/dish4.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish5">
+                        <img src="images/dish5.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish6">
+                        <img src="images/dish6.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish7">
+                        <img src="images/dish7.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish8">
+                        <img src="images/dish8.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
+
+                    <div class="swiper-slide slide" data-name="dish9">
+                        <img src="images/dish9.jpg" alt="">
+                        <h3 class="price">600p</h3>
+                    </div>
                 </div>
 
-                </div>
-            </section>
+                <div class="swiper-pagination"></div>
 
+            </div>
+        </section>
         <!-- the packages section ends  -->
 
 
@@ -833,8 +820,18 @@
 
 
 
-        <!-- the reviews section starts  -->
 
+
+
+
+
+
+
+
+        
+
+        <!-- the reviews section starts  -->
+<!-- 
         <section class="reviews" id="reviews">
             <div class="heading">
                 <span>Reviews</span>
@@ -901,7 +898,7 @@
 
             </div>
 
-        </section>
+        </section> -->
 
         <!-- the reviews section ends  -->
 
@@ -941,9 +938,9 @@
                 </div>
 
                 <div class="share">
-                    <a href="https://vk.com/bravolaudes" class="fab fa-vk"></a>
-                    <a href="" class="fab fa-instagram"></a>
-                    <a href="https://wa.me/message/3U27COCOMNUBC1" class="fab fa-whatsapp"></a>
+                    <a href="https://vk.com/bravolaudes" class="fab fa-vk" target="_blank"></a>
+                    <a href="https://www.instagram.com/peter_m_m/" class="fab fa-instagram" target="_blank"></a>
+                    <a href="https://wa.me/message/3U27COCOMNUBC1" class="fab fa-whatsapp" target="_blank"></a>
                 </div>
 
                 <div class="credit">All rights reserved. Laudes 2022</div>
