Add the code and library code for the rating section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 
     <!-- this is the link for the light gallery taht we used on the gallery  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/css/lightgallery.min.css">
@@ -670,6 +670,7 @@
 
 
 
+
         <!-- the order section starts  -->
 
             <section class="order" id="order">
@@ -729,6 +730,64 @@
 
 
 
+        <!-- the reviews section starts  -->
+
+
+        <section class="reviews" id="reviews">
+            <div class="heading">
+                <span>Reviews</span>
+                <h3>Reviews from some of our Clients</h3>
+            </div>
+
+            <div class="swiper reviews-slider">
+                <div class="swiper-wrapper">
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review1.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review2.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review3.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review4.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review5.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review6.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review7.png" alt="first review">
+                  </div>
+
+                  <div class="swiper-slide slide">
+                    <img src="images/review8.png" alt="first review">
+                  </div>
+
+
+
+                </div>
+              </div>
+            
+        </section>
+
+
+
+        <!-- the reviews section ends  -->
 
 
 
@@ -953,8 +1012,10 @@
 
 
 
-        <!-- we get the custom js file  -->
+        <!-- we get the custom js file  for the swiper library-->
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
 
         <!-- this is for the light gallery  -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.6.0/lightgallery.min.js"></script>
