Center the ratings images on the large screen

--- a/index.html
+++ b/index.html
@@ -733,54 +733,59 @@
         <!-- the reviews section starts  -->
 
 
-        <section class="reviews" id="reviews">
+        <section class="reviews align-center" id="reviews">
             <div class="heading">
                 <span>Reviews</span>
                 <h3>Reviews from some of our Clients</h3>
             </div>
 
-            <div class="swiper reviews-slider">
+            <div class="swiper reviews-slider centered">
                 <div class="swiper-wrapper">
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review1.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review2.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review3.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review4.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review5.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review6.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review7.png" alt="first review">
                   </div>
 
-                  <div class="swiper-slide slide">
+                  <div class="swiper-slide slide centered">
                     <img src="images/review8.png" alt="first review">
                   </div>
 
-
-
+                  <div class="swiper-slide slide centered">
+                    <img src="images/reviews9.png" alt="first review">
+                  </div>
                 </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
               </div>
             
         </section>
