Display the reviews only on the large screen sizes from 1400 pixels in width

--- a/index.html
+++ b/index.html
@@ -783,9 +783,7 @@
                   </div>
                 </div>
 
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-pagination pagination-reviews "></div>
               </div>
             
         </section>
