--- a/index.html
+++ b/index.html
@@ -678,39 +678,38 @@
                     <span>Order now</span>
                     <h3>fast delivery</h3>
                 </div>
-                <form action="">
-                    <div class="box-container">
+                <form action="https://formsubmit.co/petermmwansa74@gmail.com" method="POST">
                         <div class="box">
                             <div class="inputBox">
                                 <span>Full name</span>
-                                <input type="text" placeholder="Enter your name">
+                                <input type="text" placeholder="Enter your name" name="Full Name" required>
                             </div>
                             <div class="inputBox">
                                 <span>Food name</span>
-                                <input type="text" placeholder="The food you want">
+                                <input type="text" placeholder="The food you want" name="Food Name" required>
                             </div>
                             <div class="inputBox">
-                                <span>Order details</span>
-                                <input type="text" placeholder="Specifics with food">
+                                <span>Your Address</span>
+                                <input type="text" placeholder="Enter your Address" name="Address" required>
                             </div>
                             <div class="inputBox">
-                                <span>Your address</span>
-                                <textarea name="" placeholder="Enter your address" id="" cols="30" rows="10"></textarea>
+                                <span>Your Order Details</span>
+                                <textarea name="" placeholder="Enter more details about your order" id="" cols="30" rows="10" name="Food Details" data-name="Address" required></textarea>
                             </div>
                         </div>
 
                         <div class="box">
                             <div class="inputBox">
-                                <span>Number</span>
-                                <input type="number" placeholder="Enter your number">
+                                <span>Phone Number</span>
+                                <input type="tel" placeholder="Enter your phone number" name="Phone Number" required>
                             </div>
                             <div class="inputBox">
                                 <span>How much</span>
-                                <input type="number" placeholder="How many you want">
+                                <input type="number" placeholder="How many you want" name="Amount Required" required>
                             </div>
                             <div class="inputBox">
                                 <span>When you want</span>
-                                <input type="datetime-local">
+                                <input type="datetime-local" name="Date and Time" required>
                             </div>
                             <div class="inputBox">
                                 <span>Our address</span>
