--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
                     <h3>fast delivery</h3>
                 </div>
                 <form action="https://formsubmit.co/petermmwansa74@gmail.com" method="POST">
+                    <div class="box-container">
                         <div class="box">
                             <div class="inputBox">
                                 <span>Full name</span>
