Change the email and put a token

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     <span>Order now</span>
                     <h3>fast delivery</h3>
                 </div>
-                <form action="https://formsubmit.co/petermmwansa74@gmail.com" method="POST">
+                <form action="https://formsubmit.co/8d6de2c0b82a16ee2f87d7623ef9421c" method="POST">
                     <div class="box-container">
                         <div class="box">
                             <div class="inputBox">
