--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                             </div>
                             <div class="inputBox">
                                 <span>Your Order Details</span>
-                                <textarea placeholder="Enter more details about your order" id="" cols="30" rows="10" name="Food Details" data-name="Address" required></textarea>
+                                <textarea placeholder="Enter more details about your order" id="" cols="30" rows="10" name="Food Details" data-name="Details" required></textarea>
                             </div>
                         </div>
 
