Implement the loader function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <main>
         <!-- the header section = -->
 
+        <div id="preloader"></div>
+
         <div class="scrollTop" onclick="scrollToTop();"></div>
 
 
@@ -61,28 +63,28 @@
                     <div class="swiper-slide slide" style="background: url(images/hall1.jpg) no-repeat;">
                         <div class="content">
                             <h3>Awesome and cozy lighting</h3>
-                            <button href="#" class="btn">Get Started</button>
+                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall2.jpg) no-repeat;">
                         <div class="content">
                             <h3>Awesome and cozy lighting</h3>
-                            <button href="#" class="btn">Get Started</button>
+                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall5.jpg) no-repeat;">
                         <div class="content">
                             <h3>Awesome and cozy lighting</h3>
-                            <a href="#" class="btn">Get Started</a>
+                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall4.jpg) no-repeat;">
                         <div class="content">
                             <h3>Awesome and cozy lighting</h3>
-                            <a href="#" class="btn">Get Started</a>
+                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
                         </div>
                     </div>
                 </div>
