Add code to center the about section

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#gallery">Gallery</a>
+                <a href="#food">Packages</a>
                 <a href="#menu">Menu</a>
-                <a href="#packages">Packages</a>
                 <!-- <a href="#blogs">Blogs</a> -->
-                <!-- <a href="#reviews">Reviews</a> -->
+                <a href="#reviews" class="reviews-small">Reviews</a>
                 <a href="#contact">Contact Us</a>
             </nav>
 
@@ -62,29 +62,33 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide" style="background: url(images/hall1.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Awesome and cozy lighting</h3>
-                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
+                            <h3>Laudes banquet Hall</h3>
+                            <h4>+7 921 954 8535</h4>
+                            <h5>+7 900 462 4784</h5>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall2.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Awesome and cozy lighting</h3>
-                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
+                            <h3>Laudes banquet Hall</h3>
+                            <h4>+7 921 954 8535</h4>
+                            <h5>+7 900 462 4784</h5>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall5.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Awesome and cozy lighting</h3>
-                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
+                            <h3>Laudes banquet Hall</h3>
+                            <h4>+7 921 954 8535</h4>
+                            <h5>+7 900 462 4784</h5>
                         </div>
                     </div>
 
                     <div class="swiper-slide slide" style="background: url(images/hall4.jpg) no-repeat;">
                         <div class="content">
-                            <h3>Awesome and cozy lighting</h3>
-                            <a href="https://vk.com/bravolaudes" target="_blank" class="btn">Get Started</a>
+                            <h3>Laudes banquet Hall</h3>
+                            <h4>+7 921 954 8535</h4>
+                            <h5>+7 900 462 4784</h5>
                         </div>
                     </div>
                 </div>
