Done with the Layout and appearance for now

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="header">
 
 
-            <a href="#" class="logo"> Laudes </a>
+            <a href="index.html" class="logo"> Laudes </a>
 
 
             <nav class="navbar">
@@ -110,14 +110,14 @@
 
         <section class="about" id="about">
 
-            <div class="image">
+            <div class="image card">
                 <img src="images/about.jpg" alt="dish">
             </div>
 
             <div class="content">
                 <div class="about-content">
-                    <h3 class="title">Welcome to Laudes</h3>
-                    <p>
+                    <h3 class="title card">Welcome to Laudes</h3>
+                    <p class="card">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sem arcu, 
                         aliquet sed venenatis posuere, consectetur quis dolor. Etiam cursus sapien
                         vel diam congue, id pulvinar neque mollis. Pellentesque quis metus diam.
@@ -125,10 +125,10 @@
                         semper vitae orci. Pellentesque porttitor tortor non lorem ultrices,
                     </p>
             
-                    <a href="#" class="btn">Read More</a>
+                    <a href="#" class="btn card">Read More</a>
                 </div>
 
-                <div class="icons-container">
+                <div class="icons-container card">
                     <div class="icons">
                         <img src="images/quality.png" class="about-image" alt="">
                         <h3 class="about-food">Quality Food</h3>
@@ -314,38 +314,38 @@
 
             <section class="gallery" id="gallery">
 
-                <div class="heading">
+                <div class="heading card">
                     <span>Our gallery</span>
                     <h3>Our untold stories</h3>
                 </div>
 
                 <div class="gallery-container">
-                    <a href="images/dish1.jpg" class="box">
+                    <a href="images/dish1.jpg" class="box card">
                         <img src="images/dish1.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
-                    <a href="images/dish2.jpg" class="box">
+                    <a href="images/dish2.jpg" class="box card">
                         <img src="images/dish2.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
-                    <a href="images/dish3.jpg" class="box">
+                    <a href="images/dish3.jpg" class="box card">
                         <img src="images/dish3.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
-                    <a href="images/dish4.jpg" class="box">
+                    <a href="images/dish4.jpg" class="box card">
                         <img src="images/dish4.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
-                    <a href="images/dish5.jpg" class="box">
+                    <a href="images/dish5.jpg" class="box card">
                         <img src="images/dish5.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
-                    <a href="images/dish6.jpg" class="box">
+                    <a href="images/dish6.jpg" class="box card">
                         <img src="images/dish6.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
@@ -362,11 +362,11 @@
         <!-- the packages section starts  -->
 
         <section class="food" id="food">
-            <div class="heading">
+            <div class="heading card">
                 <span>Packages</span>
                 <h3>Our Extended Packages</h3>
             </div>
-            <div class="swiper food-slider">
+            <div class="swiper food-slider card">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide" data-name="dish1">
                         <img src="images/dish1.jpg" alt="">
@@ -424,7 +424,7 @@
         <!-- the menu section starts  -->
 
             <section class="menu" id="menu">
-                <div class="heading">
+                <div class="heading card">
                     <span>Our Menu</span>
                     <h3>Our popular dishes</h3>
                 </div>
@@ -433,7 +433,7 @@
                     <div class="swiper-wrapper">
 
                         <!-- the slider for displaying the breakfast menu -->
-                        <div class="swiper-slide slide">
+                        <div class="swiper-slide slide card">
                             <h3 class="title">breakfast</h3>
                             <div class="box-container">
                                 <div class="box">
@@ -485,7 +485,7 @@
 
 
                         <!-- the slider for displaying the lunch menu -->
-                        <div class="swiper-slide slide">
+                        <div class="swiper-slide slide card">
                             <h3 class="title">Lunch</h3>
                             <div class="box-container">
                                 <div class="box">
@@ -531,7 +531,7 @@
 
 
                         <!-- the slider for displayting the dinner menu -->
-                        <div class="swiper-slide slide">
+                        <div class="swiper-slide slide card">
                             <h3 class="title">Dinner</h3>
                             <div class="box-container">
                                 <div class="box">
@@ -585,7 +585,7 @@
 
 
                         <!-- the slider for displaying the cold drinks offered at the restaurant -->
-                        <div class="swiper-slide slide">
+                        <div class="swiper-slide slide card">
                             <h3 class="title">Drinks</h3>
                             <div class="box-container">
                                 <div class="box">
@@ -630,7 +630,7 @@
 
 
                         <!-- slider for displaying the desserts section  -->
-                        <div class="swiper-slide slide">
+                        <div class="swiper-slide slide card">
                             <h3 class="title">Desserts</h3>
                             <div class="box-container">
                                 <div class="box">
@@ -680,12 +680,12 @@
         <!-- the order section starts  -->
 
             <section class="order" id="order">
-                <div class="heading">
+                <div class="heading card">
                     <span>Order now</span>
                     <h3>fast delivery</h3>
                 </div>
                 <form action="https://formsubmit.co/8d6de2c0b82a16ee2f87d7623ef9421c" method="POST">
-                    <div class="box-container">
+                    <div class="box-container card">
                         <div class="box">
                             <div class="inputBox">
                                 <span>Full name</span>
@@ -729,7 +729,7 @@
                             </div>
                         </div>
                     </div>
-                    <input type="submit" value="Order Now" class="btn">
+                    <input type="submit" value="Order Now" class="btn card">
                 </form>
             </section>
         <!-- the order section starts  -->
@@ -740,12 +740,12 @@
 
 
         <section class="reviews align-center" id="reviews">
-            <div class="heading">
+            <div class="heading card">
                 <span>Reviews</span>
                 <h3>Reviews from some of our Clients</h3>
             </div>
 
-            <div class="swiper reviews-slider centered">
+            <div class="swiper reviews-slider centered card">
                 <div class="swiper-wrapper">
 
                   <div class="swiper-slide slide centered">
@@ -977,7 +977,7 @@
         <!-- the footer section starts  -->
 
             <section class="footer" id="contact">
-                <div class="icons-container">
+                <div class="icons-container card">
                     <div class="icons">
                         <i class="fas fa-clock"></i>
                         <h3>Opening hours</h3>
@@ -1005,14 +1005,14 @@
                     </div>
                 </div>
 
-                <div class="share">
+                <div class="share card">
                     <a href="https://vk.com/bravolaudes" class="fab fa-vk" target="_blank"></a>
                     <a href="https://www.instagram.com/peter_m_m/" class="fab fa-instagram" target="_blank"></a>
                     <a href="https://wa.me/message/3U27COCOMNUBC1" class="fab fa-whatsapp" target="_blank"></a>
                 </div>
 
-                <div class="credit">All rights reserved. Laudes 2022</div>
-                <div class="powered">Powered by <a href="https://www.instagram.com/rockie_tech/" target="_blank"><strong>Rockie Tech</strong></a></div>
+                <div class="credit card">All rights reserved. Laudes 2022</div>
+                <div class="powered card">Powered by <a href="https://www.instagram.com/rockie_tech/" target="_blank"><strong>Rockie Tech</strong></a></div>
 
             </section>
 
