--- a/index.html
+++ b/index.html
@@ -118,14 +118,13 @@
                 <div class="about-content">
                     <h3 class="title card">Welcome to Laudes</h3>
                     <p class="card">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sem arcu, 
-                        aliquet sed venenatis posuere, consectetur quis dolor. Etiam cursus sapien
-                        vel diam congue, id pulvinar neque mollis. Pellentesque quis metus diam.
-                        Sed dolor elit, tempor ac tincidunt vitae, 
-                        semper vitae orci. Pellentesque porttitor tortor non lorem ultrices,
+                        With almost 25 years of working, at Laudes, we believe that every event needs to be kept as a memory to live forever. We therefore at Laudes, we offer memorable services for all the type of events. Banquets, weddings, presentations, cooperative meeting, memorial services, among others.
+                        Our hall accommodate up to 40 people so if you are planning an event within this range of the number of people, be sure to work with us for an elegant event that will remain in your memories forever.
+                        Our hall is equipped with amazing lighting which can be adjusted to suit your needs.
+                        We will be waiting to provide awesome services to you.
                     </p>
             
-                    <a href="#" class="btn card">Read More</a>
+                    <a href="#" class="btn card">Write Us</a>
                 </div>
 
                 <div class="icons-container card">
@@ -136,7 +135,7 @@
                     
                     <div class="icons">
                         <img src="images/food.png" class="about-image" alt="">
-                        <h3 class="about-food">Food & Drinks</h3>
+                        <h3 class="about-food">Amazing Drinks</h3>
                     </div>
 
                     <div class="icons">
@@ -169,8 +168,8 @@
                 <div id="close-preview" class="fas fa-times"></div>
 
                 <div class="food-preview" data-target="dish1">
-                    <img src="images/dish1.jpg" alt="">
-                    <h3>delicious food</h3>
+                    <img src="images/dish9.jpg" alt="">
+                    <h3>Basic Package</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -178,14 +177,19 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
+                    <ul>
+                        <li><span>Canape on Welcome</span></li>
+                        <li><span>A pile of champagne</span></li>
+                        <li><span>Wedding cake</span></li>
+                        <li><span>Decoration of the hall</span></li>
+                        <li><span>Drinks</span></li>
+                    </ul>
+                    <a href="#" class="btn price">Purchase</a>
                 </div>
 
                 <div class="food-preview" data-target="dish2">
-                    <img src="images/dish2.jpg" alt="">
-                    <h3>delicious food</h3>
+                    <img src="images/dish4.jpg" alt="">
+                    <h3>Average Package</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -193,14 +197,20 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
+                    <ul>
+                        <li><span>Canape on Welcome</span></li>
+                        <li><span>A pile of champagne</span></li>
+                        <li><span>Wedding cake</span></li>
+                        <li><span>Decoration of the hall</span></li>
+                        <li><span>Drinks</span></li>
+                        <li><span>Drinks</span></li>
+                    </ul>
+                    <a href="#" class="btn price">Purchase</a>
                 </div>
 
                 <div class="food-preview" data-target="dish3">
-                    <img src="images/dish3.jpg" alt="">
-                    <h3>delicious food</h3>
+                    <img src="images/dish6.jpg" alt="">
+                    <h3>Full Package</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -208,14 +218,22 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
+                    <ul>
+                        <li><span>Canape on Welcome</span></li>
+                        <li><span>A pile of champagne</span></li>
+                        <li><span>Wedding cake</span></li>
+                        <li><span>Decoration of the hall</span></li>
+                        <li><span>Decoration of the hall</span></li>
+                        <li><span>Drinks</span></li>
+                        <li><span>Drinks</span></li>
+
+                    </ul>                    
+                    <a href="#" class="btn price">Purchase</a>
                 </div>
 
                 <div class="food-preview" data-target="dish4">
-                    <img src="images/dish4.jpg" alt="">
-                    <h3>delicious food</h3>
+                    <img src="images/about.jpg" alt="">
+                    <h3>Elite Package</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -223,110 +241,37 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
-                </div>
-
-                <div class="food-preview" data-target="dish5">
-                    <img src="images/dish5.jpg" alt="">
-                    <h3>delicious food</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
-                </div>
-                <div class="food-preview" data-target="dish6">
-                    <img src="images/dish6.jpg" alt="">
-                    <h3>delicious food</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
-                </div>
-
-                <div class="food-preview" data-target="dish7">
-                    <img src="images/dish7.jpg" alt="">
-                    <h3>delicious food</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
-                </div>
-
-                <div class="food-preview" data-target="dish8">
-                    <img src="images/dish8.jpg" alt="">
-                    <h3>delicious food</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
-                </div>
-
-                <div class="food-preview" data-target="dish9">
-                    <img src="images/dish9.jpg" alt="">
-                    <h3>delicious food</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis</p>
-                    <div class="price">600p</div>
-                    <a href="#" class="btn">Buy now</a>
+                    <ul>
+                        <li><span>Canape on Welcome</span></li>
+                        <li><span>A pile of champagne</span></li>
+                        <li><span>Wedding cake</span></li>
+                        <li><span>Decoration of the hall</span></li>
+                        <li><span>Drinks</span></li>
+                        <li><span>Wedding cake</span></li>
+                    </ul>
+                    <a href="#" class="btn price">Purchase</a>
                 </div>
             </section>
 
         <!-- the food preview section ends  -->
-
-
-
-
-
 
         <!-- the gallery section starts -->
 
             <section class="gallery" id="gallery">
 
                 <div class="heading card">
-                    <span>Our gallery</span>
-                    <h3>Our untold stories</h3>
+                    <span>Our Dishes</span>
+                    <h3>Elegant Dishes to choose from</h3>
                 </div>
 
                 <div class="gallery-container">
                     <a href="images/dish1.jpg" class="box card">
-                        <img src="images/dish1.jpg" alt="">
+                        <img src="images/dish6.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
                     <a href="images/dish2.jpg" class="box card">
-                        <img src="images/dish2.jpg" alt="">
+                        <img src="images/dish4.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
@@ -336,7 +281,7 @@
                     </a>
 
                     <a href="images/dish4.jpg" class="box card">
-                        <img src="images/dish4.jpg" alt="">
+                        <img src="images/dish1.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
@@ -346,7 +291,7 @@
                     </a>
 
                     <a href="images/dish6.jpg" class="box card">
-                        <img src="images/dish6.jpg" alt="">
+                        <img src="images/dish2.jpg" alt="">
                         <div class="icon"><i class="fas fa-plus"></i></div>
                     </a>
 
@@ -369,48 +314,27 @@
             <div class="swiper food-slider card">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide" data-name="dish1">
-                        <img src="images/dish1.jpg" alt="">
-                        <h3 class="price">600p</h3>
+                        <img src="images/dish9.jpg" alt="">
+                        <h3 class="price">100 000 ₽</h3>
+                        <h5>Basic Package</h5>
                     </div>
 
                     <div class="swiper-slide slide" data-name="dish2">
-                        <img src="images/dish2.jpg" alt="">
-                        <h3 class="price">600p</h3>
+                        <img src="images/dish4.jpg" alt="">
+                        <h3 class="price">110 000 ₽</h3>
+                        <h5>Average Package</h5>
                     </div>
 
                     <div class="swiper-slide slide" data-name="dish3">
-                        <img src="images/dish3.jpg" alt="">
-                        <h3 class="price">600p</h3>
+                        <img src="images/dish6.jpg" alt="">
+                        <h3 class="price">120 000 ₽</h3>
+                        <h5>Full Package</h5>
                     </div>
 
                     <div class="swiper-slide slide" data-name="dish4">
-                        <img src="images/dish4.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish5">
-                        <img src="images/dish5.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish6">
-                        <img src="images/dish6.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish7">
-                        <img src="images/dish7.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish8">
-                        <img src="images/dish8.jpg" alt="">
-                        <h3 class="price">600p</h3>
-                    </div>
-
-                    <div class="swiper-slide slide" data-name="dish9">
-                        <img src="images/dish9.jpg" alt="">
-                        <h3 class="price">600p</h3>
+                        <img src="images/about.jpg" alt="">
+                        <h3 class="price">130 000 ₽</h3>
+                        <h5>Elite Package</h5>
                     </div>
                 </div>
 
